--- a/fe_tabungan/package.json
+++ b/fe_tabungan/package.json
@@ -12,10 +12,12 @@
     "vue-router": "^4.0.5"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.316",
     "@vitejs/plugin-vue": "^1.1.5",
     "@vue/compiler-sfc": "^3.0.5",
     "typescript": "^4.1.3",
     "vite": "^2.0.5",
+    "vite-plugin-icons": "^0.3.2",
     "vite-plugin-windicss": "^0.8.2"
   }
 }
