--- a/fe_tabungan/tsconfig.json
+++ b/fe_tabungan/tsconfig.json
@@ -11,5 +11,13 @@
     "lib": ["esnext", "dom"],
     "types": ["vite/client"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "src/composables/useClickOutside.js",
+    "src/composables/useClickOutside.js",
+    "src/composables/useClickOutside.js"
+  ]
 }
