--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev app.ts",
-    "start": "node app.js",
+    "start": "ts-node app.ts",
     "build": "tsc",
     "postinstall": "npm run build"
   },
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.20",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "ts-node": "^9.1.1"
   }
 }
