--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev app.ts",
-    "start": "ts-node app.ts",
-    "build": "tsc",
-    "postinstall": "npm run build"
+    "start": "ts-node app.ts"
   },
   "keywords": [],
   "author": "",
