--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev app.ts",
-    "start": "ts-node app.ts"
+    "start:ts": "ts-node app.ts",
+    "start": "node dist/app.js",
+    "postinstall": "tsc"
   },
   "keywords": [],
   "author": "",
