--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "node dist/app.js",
     "postinstall": "tsc"
   },
+  "engines": {
+    "node": "14.16.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
