--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev app.ts",
     "start:ts": "ts-node app.ts",
-    "start": "node dist/app.js",
-    "build": "tsc"
+    "start": "ts-node node dist/app.js",
+    "serve": "node dist",
+    "build-ts": "tsc"
   },
   "engines": {
     "node": "14.16.0"
