--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev app.ts",
     "start:ts": "ts-node app.ts",
-    "start": "ts-node app.js",
+    "start": "node app.js",
     "serve": "node dist",
     "build-ts": "tsc"
   },
