--- a/nest/package.json
+++ b/nest/package.json
@@ -27,8 +27,11 @@
     "@nestjs/mapped-types": "^0.4.0",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/serve-static": "^2.1.4",
+    "aws-sdk": "^2.868.0",
     "class-validator": "^0.13.1",
     "mongoose": "^5.12.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
