--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dep
         run: npm ci && npm run build
       - name: deploy functions
-        uses: chrissank/deploy-firebase-functions@1.0.0
+        uses: BIGG-Kaymo/deploy-firebase-functions@v1.0.1
       - name: deploy hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
@@ -24,3 +24,4 @@ jobs:
           projectId: myproject-64aac
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
