--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dep
-        run: npm ci && npm run build
+        run: npm --prefix ./server ci && npm npm --prefix ./server run build
       - name: deploy hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
