--- a/server/package.json
+++ b/server/package.json
@@ -30,9 +30,11 @@
     "@nestjs/mapped-types": "^0.4.0",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/serve-static": "^2.1.4",
+    "@types/cors": "^2.8.10",
     "aws-sdk": "^2.868.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^9.6.0",
     "firebase-functions": "^3.13.2",
