feat(actions): adds actions functions

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,7 +7,8 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - main
 jobs:
-  build_and_deploy:
+  hosting-deploy:
+    name: Deploy Hosting
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,3 +24,21 @@ jobs:
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+  functions-deploy:
+    name: Deploy Functions
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: dist
+          path: dist
+      - name: Deploy
+        ses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: "${{ secrets.FIREBASE_TOKEN }}""
