--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -39,6 +39,6 @@ jobs:
       - name: Deploy
         ses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting
+          args: deploy --only functions
         env:
           FIREBASE_TOKEN: "${{ secrets.FIREBASE_TOKEN }}""
