--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -37,7 +37,7 @@ jobs:
           name: dist
           path: dist
       - name: Deploy
-        ses: w9jds/firebase-action@master
+        uses: w9jds/firebase-action@master
         with:
           args: deploy --only functions
         env:
